# cpplibtest

./: .gitignore  CMakeLists.txt  README.md  build-installer.sh  build_instaler_pkg.sh  create_installer_resources.sh  main.cpp
installer/: build_pkg_manual.sh  com.3clogic.screenrecorder.plist.in  create-image.sh  distribution.xml.in  info.plist.in  setup_dmg.applescript  uninstall.sh.in
installer/resources/: license.rtf  readme.rtf  welcome.rtf
lib/apple_silicon/Frameworks/: libavdevice.dylib  libavutil.dylib  libdatachannel.dylib  libobs-frontend-api.1.dylib  libobs-opengl.dylib  libsrt.dylib  libx264.dylib  obs-frontend-api.dylib
lib/apple_silicon/Frameworks/libobs.framework/Versions/A/_CodeSignature/: CodeResources
lib/apple_silicon/PlugIns/coreaudio-encoder.plugin/Contents/: Info.plist
lib/apple_silicon/PlugIns/coreaudio-encoder.plugin/Contents/_CodeSignature/: CodeResources
lib/apple_silicon/PlugIns/image-source.plugin/Contents/MacOS/: image-source
lib/apple_silicon/PlugIns/imageformats/: libqico.dylib  libqmacjp2.dylib  libqtiff.dylib  libqwebp.dylib
lib/apple_silicon/PlugIns/mac-avcapture-legacy.plugin/Contents/: Info.plist
lib/apple_silicon/PlugIns/mac-capture.plugin/Contents/_CodeSignature/: CodeResources
lib/apple_silicon/PlugIns/mac-syphon.plugin/Contents/_CodeSignature/: CodeResources
lib/apple_silicon/PlugIns/obs-browser.plugin/Contents/: Info.plist
lib/apple_silicon/PlugIns/obs-outputs.plugin/Contents/_CodeSignature/: CodeResources
lib/apple_silicon/PlugIns/obs-vst.plugin/Contents/MacOS/: obs-vst
lib/apple_silicon/PlugIns/obs-webrtc.plugin/Contents/MacOS/: obs-webrtc
lib/apple_silicon/PlugIns/obs-x264.plugin/Contents/MacOS/: obs-x264
lib/apple_silicon/PlugIns/rtmp-services.plugin/Contents/: Info.plist
lib/apple_silicon/PlugIns/rtmp-services.plugin/Contents/MacOS/: rtmp-services
lib/apple_silicon/PlugIns/rtmp-services.plugin/Contents/_CodeSignature/: CodeResources
